# verity

./: .cursorrules  .dockerignore  .gitignore  README.md
.github/workflows/: ci.yml
apps/web/: .env.example  next.config.ts  package-lock.json  package.json  vercel.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: agent-trace-timeline.tsx  braintrust-trace-link.tsx  chat-panel.tsx  contract-panel.tsx  dashboard.tsx  eval-report-skeleton.tsx  eval-report.tsx  exception-drawer.tsx  (+9 more)
data/fixtures/: README.md
data/fixtures/harbor-analytics/: manifest.json
data/fixtures/nextera-systems/: manifest.json
docs/: DEPLOY.md  DEPLOY_CHECKLIST.md  DESIGN_SPEC.md  INTERVIEW_DEFENSE.md  PORTFOLIO_AUDIT.md  PROJECT_SPEC.md  learning-log.md
infra/: .env.example  docker-compose.yml  init.sql
services/agent/: Dockerfile  pyproject.toml  railway.toml
services/agent/agent/: __init__.py  auth.py  config.py  graph.py  main.py  mcp_client.py  rate_limit.py  schemas.py  state.py  streaming.py  tracing.py
services/agent/agent/agents/: __init__.py  common.py  contract_agent.py  pipeline.py  reconciliation_agent.py  report_agent.py  supervisor.py
services/agent/agent/nodes/: __init__.py
services/agent/scripts/: verify_reconcile.py
services/mcp/: Dockerfile  pyproject.toml  railway.toml
services/mcp/mcp_server/: __init__.py  config.py  main.py  paths.py
services/mcp/mcp_server/tools/: __init__.py  extract_obligations.py  parse_invoice.py  reconcile.py
services/mcp/scripts/: verify_tools.py
services/mcp/tests/: test_paths.py
(+37 files in other folders)
