[project]
name = "verity-agent"
version = "0.1.0"
description = "Verity LangGraph agent service (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp>=1.28.0",
    "verity-shared @ file:../../packages/shared",
    "braintrust==0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.hatch.metadata]
allow-direct-references = true
