[project]
name = "verity-mcp"
version = "0.1.0"
description = "Verity MCP server — parse, extract, reconcile tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28.0",
    "pydantic>=2.0",
    "verity-shared @ file:../../packages/shared",
]

[project.scripts]
verity-mcp = "mcp_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
verity-shared = { path = "../../packages/shared", editable = true }
